Add originEnforcementFilter. Auto-detect PE and CE tools and hide/show needed